--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -802,6 +802,11 @@ a {
   color: #CF9C67;
 }
 
+a:hover {
+  color: #7A7A7A;
+  transition-duration: 300ms;
+}
+
 a:active, a:focus {
   background: transparent;
 }
