--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -1207,3 +1207,24 @@ table a, #comments a {
     font-size: 1.6rem;
   }
 }
+
+#scrollBtn {
+  /* display: none; */
+  /* Hidden by default */
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  background-color: #CF9C67;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 40px;
+  font-size: 10px;
+}
+
+#scrollBtn:hover {
+  background-color: #7A7A7A;
+  /* Add a dark-grey background on hover */
+}
